--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,7 @@
     <h1>Welcome!</h1>
 
     <!-- scripts -->
-    <!-- <script src="assets/lib/..."></script> -->
-    <script src="assets/js/main.min.js"></script>
+    <script src="assets/js/bundle.min.js"></script>
 </body>
 
 
