jquery and bootstrap added

--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Front-end Starter</title>
     <!-- styles -->
+    <link rel="stylesheet" href="assets/lib/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.min.css">
 </head>
 
 <body>
-    <h1>Welcome!</h1>
+    <h1 class="display-3 text-info">Hello World</h1>
 
     <!-- scripts -->
+    <script src="assets/lib/jquery.min.js"></script>
+    <script src="assets/lib/popper.min.js"></script>
+    <script src="assets/lib/bootstrap.min.js"></script>
     <script src="assets/js/bundle.min.js"></script>
 </body>
 
